--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -38,6 +38,11 @@
 "ownerpermissionexplain": "Puede sobrescribir ACTIVE. En caso de hackeo o pérdida de ACTIVE",
 "retryagain": "Reintentar de nuevo",
 "connectionproblem": "Uf, Problema de conexión",
-"accountsthatcanbegeneratedtoday": "Cuentas que se pueden generar hoy"
+"accountsthatcanbegeneratedtoday": "Cuentas que se pueden generar hoy",
+"disclaimer01": "Esta plataforma todavía está en fase beta. Pueden ocurrir errores o las cuentas de esta plataforma pueden cambiar o eliminarse sin previo aviso.",
+"accountsponsored": "Cuenta patrocinada por la comunidad",
+"noacountavailable": "Lamentablemente, no se puede generar ninguna cuenta.",
+
+
 
 }
