--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -38,6 +38,10 @@
 "ownerpermissionexplain": "Может перезаписать ACTIVE. В случае взлома или утери ACTIVE",
 "retryagain": "Повторить попытку",
 "connectionproblem": "Уф, проблема с подключением",
-"accountsthatcanbegeneratedtoday": "Аккаунты, которые можно создать сегодня"
+"accountsthatcanbegeneratedtoday": "Аккаунты, которые можно создать сегодня",
+"disclaimer01": "Эта платформа все еще находится на стадии бета-тестирования. Могут возникать ошибки, а аккаунты на этой платформе могут изменяться или удаляться без предварительного уведомления.",
+"accountsponsored": "Аккаунт спонсирован сообществом",
+"noacountavailable": "К сожалению, аккаунт создать невозможно."
+
 
 }
