--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -37,6 +37,10 @@
 "ownerpermissionexplain": "Може перезаписати ACTIVE. У випадку взлому або втрати ACTIVE",
 "retryagain": "Спробуйте ще раз",
 "connectionproblem": "Уф, проблема з підключенням",
-"accountsthatcanbegeneratedtoday": "Акаунти, які можна створити сьогодні"
+"accountsthatcanbegeneratedtoday": "Акаунти, які можна створити сьогодні",
+"disclaimer01": "Ця платформа ще перебуває на етапі бета-тестування. Можливі помилки, або акаунти цієї платформи можуть змінюватися або видалятися без попередження.",
+"accountsponsored": "Акаунт підтриманий спільнотою",
+"noacountavailable": "На жаль, неможливо створити акаунт."
+
 
 }
