--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -38,6 +38,10 @@
 "ownerpermissionexplain": "Peut remplacer ACTIVE. En cas de piratage ou de perte d'ACTIVE",
 "retryagain": "Réessayer",
 "connectionproblem": "Oups, Problème de connexion",
-"accountsthatcanbegeneratedtoday": "Comptes pouvant être générés aujourd'hui"
+"accountsthatcanbegeneratedtoday": "Comptes pouvant être générés aujourd'hui",
+"disclaimer01": "Cette plateforme est encore en phase bêta. Des erreurs peuvent survenir ou les comptes de cette plateforme peuvent être modifiés ou supprimés sans préavis.",
+"accountsponsored": "Compte sponsorisé par la communauté",
+"noacountavailable": "Malheureusement, aucun compte ne peut être généré."
+
 
 }
