--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -34,5 +34,13 @@
 "clicktocopy": "Clicca per copiare",
 "activepermissionexplain": "Per uso quotidiano",
 "tologin": "Per accedere",
-"ownerpermissionexplain": "Può sovrascrivere ACTIVE. In caso di hack o perdita di ACTIVE"
+"ownerpermissionexplain": "Può sovrascrivere ACTIVE. In caso di hack o perdita di ACTIVE",
+"retryagain": "Riprova",
+"connectionproblem": "Uff, problema di connessione",
+"accountsthatcanbegeneratedtoday": "Account che possono essere generati oggi",
+"disclaimer01": "Questa piattaforma è attualmente ancora in fase beta. Possono verificarsi errori o gli account su questa piattaforma possono cambiare o essere eliminati senza preavviso.",
+"accountsponsored": "Account sponsorizzato dalla comunità",
+"noacountavailable": "Purtroppo, non è possibile generare un account."
+
+
 }
