--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -41,8 +41,5 @@
 "accountsthatcanbegeneratedtoday": "Cuentas que se pueden generar hoy",
 "disclaimer01": "Esta plataforma todavía está en fase beta. Pueden ocurrir errores o las cuentas de esta plataforma pueden cambiar o eliminarse sin previo aviso.",
 "accountsponsored": "Cuenta patrocinada por la comunidad",
-"noacountavailable": "Lamentablemente, no se puede generar ninguna cuenta.",
-
-
-
+"noacountavailable": "Lamentablemente, no se puede generar ninguna cuenta."
 }
