add language button

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,6 +1,7 @@
 
 {
 "language": "العربية",
+"countrycode":"AE",
 "thelanguage": "اللغة",
 "createaccount": "إنشاء حساب",
 "usernamemustmatchformat": "يجب أن يتطابق اسم المستخدم مع هذا التنسيق",
