--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,5 +1,6 @@
 {
     "language": "Deutsch",
+    "countrycode":"DE",
     "thelanguage":"Sprache",
     "createaccount":"Konto erstellen",
     "usernamemustmatchformat":"Benutzername muss diesem Format entsprechen",
