--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
     "language": "English",
+    "countrycode":"US",
     "thelanguage":"Language",
     "@language":{
         "description": "The current language"
