--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,6 +1,7 @@
 
 {
 "language": "Español",
+"countrycode": "ES",
 "thelanguage": "Idioma",
 "createaccount": "Crear cuenta",
 "usernamemustmatchformat": "El nombre de usuario debe coincidir con este formato",
