--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,5 +1,6 @@
 {
 "language": "Italiano",
+"countrycode":"IT",
 "thelanguage": "Lingua",
 "createaccount": "Crea account",
 "usernamemustmatchformat": "Il nome utente deve corrispondere a questo formato",
