--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,6 +1,7 @@
 
 {
 "language": "Português",
+"countrycode": "PT",
 "thelanguage": "Idioma",
 "createaccount": "Criar conta",
 "usernamemustmatchformat": "O nome de usuário deve corresponder a este formato",
