--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -1,5 +1,6 @@
 {
 "language": "Українська",
+"countrycode": "UA",
 "thelanguage": "Мова",
 "createaccount": "Створити обліковий запис",
 "usernamemustmatchformat": "Ім'я користувача повинно відповідати цьому формату",
