--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -16,7 +16,7 @@
     "noaccountsavailable":"Derzeit sind keine Konten verfügbar",
     "privatekey":"Privatschlüssel",
     "publickey":"Öffentlicher Schlüssel",
-    "pleasesavethiscredentials":"Bitte speichern Sie diese Zugangsdaten\nsonst gehen sie verloren",
+    "pleasesavethiscredentials":"Bitte speichern Sie diese Zugangsdaten, sonst gehen sie verloren",
     "saveasfile":"Als Datei speichern",
     "copiedtoclipboard":"In die Zwischenablage kopiert",
     "pleasewait":"Bitte warten",
