update flutter and add info for copy

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -34,6 +34,7 @@
 "network": "الشبكة",
 "certificate": "شهادة",
 "clicktocopy": "انقر للنسخ",
+"clicktocopyfullykey": "انقر لنسخ المفتاح الكامل",
 "activepermissionexplain": "للاستخدام اليومي",
 "tologin": "لتسجيل الدخول",
 "ownerpermissionexplain": "قد يتجاوز ACTIVE. في حالة الاختراق أو فقدان ACTIVE",
